# meego-panel-devices

./: .gitignore  Makefile.am  NEWS  autogen.sh  configure.ac
.tx/: config
data/: Makefile.am  moblin-panel-devices.schemas.in
m4/: .gitignore  Makefile.am
po/: POTFILES.in  ar.po  ast.po  bg.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  en_GB.po  en_US.po  es.po  eu.po  fa.po  fi.po  fr.po  gl.po  hu.po  id.po  it.po  ja.po  km.po  ko.po  nb.po  nl.po  pa.po  pl.po  pt.po  pt_BR.po  ru.po  sk.po  sl.po  sr.po  sv.po  tr.po  uk.po  vi.po  zh_CN.po  zh_TW.po
power-icon/src/: mpd-idle-manager.c  mpd-lid-device.c  mpd-power-icon.c
src/: mpd-battery-device.c  mpd-brightness-tile.c  mpd-conf.c  mpd-devices-tile.c  mpd-display-device.c  mpd-storage-device-tile.c
